# MinerU_center

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  deploy.sh  docker-compose.yml  pyproject.toml  test_task.py  ui.md
.claude/: settings.local.json
app/: __init__.py  config.py  main.py
app/api/: __init__.py  config.py  instances.py  stats.py  tasks.py
app/models/: __init__.py  config.py  instance.py  task.py
app/services/: __init__.py  database.py  instance_pool.py  mineru_client.py  queue_manager.py  scheduler.py
app/utils/: retry.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.vue  main.js
ui/src/api/: index.js
ui/src/components/: ConfigPanel.vue  FailedTasksDialog.vue  InstancePanel.vue  InstanceStatusDialog.vue  QueuePanel.vue  StatsCard.vue  TaskCard.vue  TaskListDialog.vue
ui/src/i18n/: en.js  index.js  zh.js
ui/src/stores/: index.js
ui/src/styles/: main.css
ui/src/views/: Dashboard.vue
